--- a/src/App.css
+++ b/src/App.css
@@ -13,12 +13,10 @@
 /* ------post_api_testing------ start */
 label {
     width: 20%;
- 
+
 }
 
-input {
-    margin-top: 20px;
-}
+
 
 
 h1,
@@ -33,6 +31,7 @@ ol {
 .bg_yellow {
     background: #FFAE00;
     padding-block: 10px;
+
 }
 
 .fs_9 {
@@ -166,6 +165,10 @@ body {
     margin-top: 20px;
 }
 
+.mb_20 {
+    margin-bottom: 20px;
+}
+
 .box_shadow {
     box-shadow: 0px 1px 3px 0px #00000033;
 }
@@ -185,4 +188,15 @@ body {
 
 .dash_height {
     height: calc(100vh - 64px);
+}
+
+/* ------user page css ------  */
+.border_btm th {
+    border-bottom: 0.5px solid rgba(0, 0, 0, 0.3);
+    padding-bottom: 17px;
+}
+
+.border_bottom td {
+    padding-block: 27px;
+
 }
