--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,10 @@ label {
 
 }
 
+.text_red {
+    color: #E72929;
+}
+
 
 
 
@@ -143,12 +147,24 @@ body {
     padding: 20px;
 }
 
+.p_10 {
+    padding: 10px;
+}
+
 .ps_20 {
     padding-left: 20px;
 }
 
 .py_12 {
     padding-block: 12px;
+}
+
+.px_10 {
+    padding-inline: 10px;
+}
+
+.py_10 {
+    padding-block: 10px;
 }
 
 
@@ -199,4 +215,9 @@ body {
 .border_bottom td {
     padding-block: 27px;
 
+}
+
+.action_popup_shadow {
+
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
 }
