view user and checbox css

--- a/src/App.css
+++ b/src/App.css
@@ -279,6 +279,37 @@ body {
 }
 
 /* add user css --------  */
+
+/* custom_checkbox   -----start  */
+.custom_checkbox {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    border: 1px solid #000000;
+    border-radius: 3px;
+    position: relative;
+    cursor: pointer;
+}
+
+
+.custom_checkbox:checked::after {
+    content: '';
+    position: absolute;
+    top: 3px;
+    left: 7px;
+    width: 5px;
+    height: 10px;
+    border: solid #000000;
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+}
+
+/* custom_checkbox   -----end  */
+
+
+
 .Rest_btn {
 
     background: linear-gradient(90deg, #8A2387 0%, #E94057 49.43%, #F27121 105.44%);
@@ -286,6 +317,13 @@ body {
     -webkit-text-fill-color: transparent;
     background-clip: text;
     border: none;
+
+    /* other way-------  */
+
+    /* border: 1.5px solid transparent;
+    background: linear-gradient(white, white)padding-box, linear-gradient(90deg, #8A2387 0%, #E94057 49.43%, #F27121 105.44%)border-box;
+    padding: 12px 15px !important;
+    border-radius: 10px; */
 
     /* text-fill-color: transparent; */
 }
@@ -312,7 +350,7 @@ body {
 }
 
 .reset_button {
-    padding: 16px 15px;
+    padding: 12px 15px;
     border-radius: 12px;
     margin-left: 20px;
 }
